# distillate

./: .gitignore  Cargo.toml  README.md
examples/: distillate.config
src/: main.rs
src/config/: mod.rs
src/processor/: mod.rs
src/sink/: mod.rs
