[package]
name = "distillate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = { version = "6.1.1", features = ["serde"] }
tokio = { version = "1.36.0", features = ["full"] }
clap = { version = "4.5.1", features = ["derive"]}
env_logger = { version = "0.11.2", features = ["auto-color"] }
log = "0.4.21"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
